testando push personalizado

--- a/TODO
+++ b/TODO
@@ -3,11 +3,13 @@
 -> criar ManagerClient para todas funções relacionadas ao cliente[ ]
 -> criar ManagerEnterprise para todas funções relacionadas a empresa[ ]
 -> criar ManagerProducts para todas funções relacionadas a produtos[ ]
--> separar uploads, js, css, etc e compactar todos ao maximo[ ]
+-> separar uploads, js, css, etc e compactar todos ao maximo[ ] 
+                    |    |-[ ] 
+                    |- [ ]
 -> resetar BD para user[ x ]
 -> consertar transição de telas pos login para dashboard[ x ]
 -> arrumar BD usando require [ x ]
--> criar arquivos com as functions polimorficas
+-> criar arquivos com as functions polimorficas [ ] 
 -> nomeclatura das variaveis [  ]
 -> Arrumar arquivos exportar e importar o maximo para melhor entedimento[ ]
 ->versionar no git[  ]
