colocando pasta teste

--- a/TODO
+++ b/TODO
@@ -12,5 +12,12 @@
 -> criar arquivos com as functions polimorficas [ ] 
 -> nomeclatura das variaveis [  ]
 -> Arrumar arquivos exportar e importar o maximo para melhor entedimento[ ]
-->versionar no git[  ]
--> MATAR QUEM CRIOU ESSA MERDA [  ]	
+->versionar no git[ x ]
+-> MATAR QUEM CRIOU ESSA MERDA [  ]
+-> Corrigir importações e exportações [ x ] -> (falta os calendarios e funções adicionais) [  ]
+-> Fazer um arquivo "mae" do PHP para armazenar as features de cliente, empresa e produto, separadamente [  ]
+-> Fazer um arquivo "mae" de CSS para armazenar as folhas de estilos para diminuir o risco de sobreposição [  ]
+-> Corrigir BD e seus erros que eu ainda nao identifiquei [  ]
+-> Fazer uploads das imagens [  ]
+-> Corrigir os graficos apex.js [  ]
+
