adicionando mais tasks

--- a/TODO
+++ b/TODO
@@ -20,4 +20,5 @@
 -> Corrigir BD e seus erros que eu ainda nao identifiquei [  ]
 -> Fazer uploads das imagens [  ]
 -> Corrigir os graficos apex.js [  ]
+-> Corrigir os erros de MYSQL [ ]
 
